Fixes gap between heat maps

--- a/components/heat-map.scss
+++ b/components/heat-map.scss
@@ -1,8 +1,8 @@
 
 .heat-map {
-  margin: 12px;
+  margin: 16px 12px 16px 8px;
   border-radius: 3px;
-  border: 1px solid #EEEEEE;
+  border: 1px solid #e3e4e4;
   background: #FFFFFF;
   box-shadow: 0 1px 2px 0 rgba(0,0,0,0.02);
   background-color: white;
